Remove the unused references to Map View's "animate" property.
The "animate" property of a map view was listed
in documentation as being supported by Android.
However, it is never accessed anywhere in the code --
it is only set and never read. It cannot be supported
since it clobbers the animate() method of the view.

TIMOB-9913